# zed

./: .gitignore  .zed.toml  Cargo.toml  design_tokens_format_module.md  rust-toolchain.toml
assets/contexts/: system.zmd
assets/keymaps/: default.json
assets/settings/: default.json
assets/themes/Experiments/: Abruzzo.json  Brush Trees Dark.json  Brush Trees Light.json
assets/themes/Internal/: Atelier Dune Dark.json  Atelier Dune Light.json  Atelier Heath Dark.json  Atelier Heath Light.json  Atelier Seaside Dark.json  Atelier Seaside Light.json  Ayu Dark.json  Ayu Light.json  Ayu Mirage.json  Dracula.json  Gruvbox Dark Medium.json  Gruvbox Light Medium.json  Monokai.json  Nord.json  Seti UI.json  Tokyo Day.json  Tokyo Night Storm.json  Tokyo Night.json  Zed Pro Dark.json  Zed Pro Light.json  Zenburn.json
assets/themes/wip/: one_dark.json  system_default_dark.json  tailwind_dark.json  tailwind_light.json  totally_not_one_dark.json  zed_dark.json  zed_light.json
crates/activity_indicator/src/: activity_indicator.rs
crates/ai/: Cargo.toml  contexts.zmd  vision.zmd
crates/ai/src/: agents.rs  ai.rs  assistant.rs  codegen.rs  function_calling.rs  skills.rs
crates/ai/styles/: Cargo.toml
crates/ai2/src/: auth.rs
crates/animation_box/: Cargo.toml
crates/animation_box/src/: animation_box.rs
crates/assets/: build.rs
crates/assistant/: Cargo.toml
crates/assistant/src/: assistant.rs  assistant_panel.rs  codegen.rs  contexts.rs  prompt_library.rs  prompts.rs  sample_messages.rs
crates/auto_update/: Cargo.toml
crates/auto_update/src/: auto_update.rs
crates/binary_manager/: Cargo.toml
crates/binary_manager/src/: binary_manager.rs  github.rs
crates/breadcrumbs/: Cargo.toml
crates/breadcrumbs/src/: breadcrumbs.rs
crates/buffer/src/: lib.rs  tests.rs
crates/call/src/: call.rs  room.rs
crates/channels/: Cargo.toml  README.md
crates/channels/src/: channels.rs
crates/client/: Cargo.toml
crates/collab/: Cargo.toml  basic.conf
crates/collab_ui/: Cargo.toml
crates/color/: Cargo.toml
crates/composite_buffer/: Cargo.toml
crates/composite_buffer/src/: composite_buffer.rs
crates/db/: Cargo.toml  sqlx-data.json
crates/diagnostics/: Cargo.toml
crates/editor/: Cargo.toml
crates/extension/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/find_in_buffer/: Cargo.toml
crates/find_in_buffer/src/: find_in_buffer.rs
crates/gpui/: Cargo.toml  README.md  build.rs
crates/gpui2/: Cargo.toml
crates/gpui_test/: Cargo.toml
crates/interpreter_selector/: Cargo.toml
crates/interpreter_selector/src/: interpreter_selector.rs
crates/language/: Cargo.toml
crates/live_kit_client/: Cargo.toml
crates/notebook/: Cargo.toml
crates/notebook_editor/: Cargo.toml
crates/perf/: Cargo.toml
crates/perf/src/: perf.rs  perf_util.rs  sql.rs
crates/perf_macros/: Cargo.toml
crates/perf_visualizer/: Cargo.toml
crates/plugin_cache/: Cargo.toml  README.md
crates/plugin_handles/: Cargo.toml  README.md
crates/plugin_host/: Cargo.toml  build.rs
crates/plugin_host/src/: plugin_host.rs
crates/plugin_host/wit/: lsp-adapter.wit
crates/plugin_runtime/: Cargo.toml
crates/prettier/: Cargo.toml
crates/prettier/src/: prettier.rs
crates/project/: Cargo.toml
crates/python/: Cargo.toml
crates/python/src/: python.rs  python_settings.rs
crates/recent_projects/: Cargo.toml
crates/remote/: Cargo.toml  build.rs
crates/remote_server/: Cargo.toml
crates/scripting/: Cargo.toml  zed.js
crates/scripting/src/: scripting.rs  scripting_test.rs
crates/semantic_index2/: Cargo.toml
crates/settings/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/settings_ui/src/: render_setting.rs  setting_item.rs  settings.rs  settings_ui.rs  stories.rs
crates/settings_ui/src/settings/: editor_settings.rs
crates/settings_ui/src/stories/: settings_menu.rs
crates/statsd/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: store.rs
crates/story/: Cargo.toml
crates/story/src/: story.rs
crates/storybook/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal/src/: event_listener.rs  platform.rs  remote_pty.rs  terminal.rs  terminal_element.rs  terminal_settings.rs  terminal_view.rs
crates/terminal_util/: Cargo.toml
crates/terminal_util/src/: terminal_util.rs
crates/terminal_view/: Cargo.toml
crates/terminal_zty/: Cargo.toml
crates/terminal_zty/src/: terminal_zty.rs
crates/theme/: Cargo.toml
crates/theme2/: Cargo.toml
crates/theme_importer/: Cargo.toml
crates/theme_testbench/: Cargo.toml
crates/ui2/: Cargo.toml
crates/ui_input/: Cargo.toml
crates/ui_input/src/: dropdown.rs  story.rs  ui_input.rs
crates/ui_input/src/story/: dropdown.rs
crates/welcome/: Cargo.toml
crates/workspace/: Cargo.toml
crates/ws2/: Cargo.toml  README.md
crates/zed/: Cargo.toml
crates/zed2/: Cargo.toml
docs/: composite-buffers.md
docs/src/: SUMMARY.md  system_requirements.md  telemetry.md
example_extension/rust-analyzer/: server.mjs  server.toml
plugins/: Cargo.toml
plugins/installation/: Cargo.toml
plugins/json_language/: Cargo.toml  wit
plugins/typescript_language/: Cargo.toml
plugins/typescript_language/src/: lib.rs
script/: generate-zed-sqlx-data
server/src/: rpc.rs
styles/: .eslintrc.js  .gitignore  .prettierrc  app.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
styles/lib/: clearDirectory.ts  export.ts  slugify.ts  snakeCase.ts  writeToDisk.ts
styles/src/: buildLicenses.ts  buildThemes.ts  buildTokens.ts  color.ts  colorSchemes.ts  common.ts  design_tokens.json  types.d.ts
styles/theme/: border.ts  buildThemes.ts  color.ts  colors.ts  config.ts  icon.ts  index.ts  intensity.ts  players.ts  selection.ts  text.ts
styles/themes/: index.ts  oneDark.ts  tailwindDark.ts  tailwindLight.ts
styles/tokens/: buildTokenSet.ts
styles/tool/: tsconfig.json
styles/ui/: index.ts  package-lock.json  package.json
styles/zds/: default_theme.ts  system.ts  zdsComponent.ts
zed/: Cargo.toml
zed/src/: rpc.rs  test.rs  worktree.rs
zrpc/proto/: zed.proto
zrpc/src/: peer.rs  proto.rs
(+658 files in other folders)
