[package]
name = "animation_box"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/animation_box.rs"
doctest = false

[dependencies]
gpui = { path = "../gpui" }
workspace = { path = "../workspace" }
project = { path = "../project" }
theme = { path = "../theme" }
util = { path = "../util" }

anyhow.workspace = true
