[package]
name = "assistant"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/assistant.rs"
doctest = false

[dependencies]
editor = { path = "../editor" }
gpui = { path = "../gpui" }
language = { path = "../language" }
settings = { path = "../settings" }
theme = { path = "../theme" }
workspace = { path = "../workspace" }

futures = "0.3"
