[package]
name = "assistant"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/assistant.rs"
doctest = false

[dependencies]
client = { path = "../client" }
editor = { path = "../editor" }
gpui = { path = "../gpui" }
language = { path = "../language" }
rpc = { path = "../rpc" }
settings = { path = "../settings" }
theme = { path = "../theme" }
util = { path = "../util" }
workspace = { path = "../workspace" }

futures = "0.3"
log = "0.4"
unindent.workspace = true
