[package]
name = "binary_manager"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/binary_manager.rs"
doctest = false

[dependencies]
util = { path = "../util" }

anyhow.workspace = true
async-compression = { version = "0.3", features = ["gzip", "futures-bufread"] }
async-tar = "0.4.2"
async-recursion = "0.3"
async-trait.workspace = true
futures.workspace = true
log.workspace = true
smol.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
