[package]
name = "composite_buffer"
version = "0.1.0"
edition = "2021"

[features]
test-support = ["rand"]

[lib]
path = "src/composite_buffer.rs"

[dependencies]
anyhow = "1.0.38"
clock = { path = "../clock" }
gpui = { path = "../gpui" }
language = { path = "../language" }
lsp = { path = "../lsp" }
sum_tree = { path = "../sum_tree" }
theme = { path = "../theme" }
rand = { version = "0.8.3", optional = true }

[dev-dependencies]
rand = "0.8.3"
