[package]
name = "find_in_buffer"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/find_in_buffer.rs"

[dependencies]
text = { path = "../text" }
editor = { path = "../editor" }
gpui = { path = "../gpui" }
workspace = { path = "../workspace" }
postage = { version = "0.4", features = ["futures-traits"] }
