[package]
name = "perf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/perf.rs"
doctest = false

[dependencies]
db = { path = "../db" }
sqlez = { path = "../sqlez" }
util = { path = "../util" }
anyhow = "1.0.57"
lazy_static = "1.4.0"
log = { version = "0.4.16", features = ["kv_unstable_serde"] }
nanoid = "0.4"
smol = "1.2"
quanta = "0.10.1"

[dev-dependencies]
perf_macros = { path = "../perf_macros" }
