[package]
name = "perf_visualizer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/perf_visualizer.rs"
doctest = false

[dependencies]
gpui = { path = "../gpui" }
perf = { path = "../perf" }
settings = { path = "../settings" }
workspace = { path = "../workspace" }
project = { path = "../project" }