[package]
name = "plugin_host"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/plugin_host.rs"

[dependencies]
node_runtime = { path = "../node_runtime" }
collections = { path = "../collections" }
util = { path = "../util" }

smol.workspace = true
anyhow.workspace = true
wasmtime.workspace = true
