[package]
name = "python"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/python.rs"
doctest = false

[dependencies]
anyhow.workspace = true
db.workspace = true
fs = { workspace = true, features = ["test-support"] }
gpui.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
