[package]
name = "scripting"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lib]
path = "src/scripting.rs"
doctest = false

[dependencies]
anyhow.workspace = true
collections.workspace = true
gpui.workspace = true
serde.workspace = true
serde_v8 = "0.171.0"
v8 = "0.83"
util.workspace = true
futures.workspace = true
deno_core = "0.263"

[dev-dependencies]
gpui = {workspace = true, features = ["test-support"]}
