[package]
name = "store"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/store.rs"
doctest = false

[features]
test-support = []

[dependencies]
collections = { path = "../collections" }
util = { path = "../util" }

anyhow = "1.0"
futures = "0.3"
lmdb = "0.8"
log = "0.4"
rusqlite = "0.27"

[dev-dependencies]
env_logger = "0.9.1"
tempdir = "0.3"
