[package]
name = "terminal_zty"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/terminal_zty.rs"
doctest = false


[dependencies]
util = { path = "../util" }
terminal_util = { path = "../terminal_util" }
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "a51dbe25d67e84d6ed4261e640d3954fbdd9be45" }
gpui = { path = "../gpui" }
settings = { path = "../settings" }
procinfo = { git = "https://github.com/zed-industries/wezterm", rev = "5cd757e5f2eb039ed0c6bb6512223e69d5efc64d", default-features = false }
libc = "0.2"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"


[dev-dependencies]
rand = "0.8.5"
