[package]
name = "ui_input"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "ui_input"
path = "src/ui_input.rs"

[dependencies]
editor.workspace = true
itertools = { workspace = true, optional = true }
gpui.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
story = { workspace = true, optional = true }

[features]
default = []
stories = ["dep:itertools", "dep:story"]
