[package]
name = "typescript_language"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin = { path = "../../crates/plugin" }
# language = { path = "../../crates/language"}
# lsp = { path = "../../crates/lsp"}
installation = { path = "../installation" }
serde_json = "1.0"
serde = "1.0"
